--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,8 +1,17 @@
 {
   "@microsoft/generator-sharepoint": {
-    "version": "1.4.1",
+    "version": "1.17.4",
+    "nodeVersion": "16.20.2",
+    "isDomainIsolated": false,
+    "isCreatingSolution": true,
+    "sdksVersions": {
+      "@microsoft/microsoft-graph-client": "3.0.2",
+      "@microsoft/teams-js": "2.9.1"
+    },
     "libraryName": "jquery-application-toastr",
     "libraryId": "461c7ee8-3ab9-47ee-b52d-44c77087d9e8",
-    "environment": "spo"
+    "environment": "spo",
+    "packageManager": "npm",
+    "componentType": "extension"
   }
 }
