--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=16.13.0 <17.0.0"
   },
+  "main": "lib/index.js",
   "scripts": {
     "build": "gulp bundle",
     "clean": "gulp clean",
@@ -12,21 +13,27 @@
     "ship": "gulp clean && gulp bundle --ship && gulp package-solution --ship"
   },
   "dependencies": {
-    "@microsoft/sp-core-library": "~1.4.1",
-    "@microsoft/decorators": "~1.4.1",
-    "@types/webpack-env": ">=1.12.1 <1.14.0",
-    "@microsoft/sp-dialog": "~1.4.1",
-    "@microsoft/sp-application-base": "~1.4.1"
+    "@microsoft/sp-core-library": "1.17.4",
+    "@microsoft/decorators": "1.17.4",
+    "@microsoft/sp-dialog": "1.17.4",
+    "@microsoft/sp-application-base": "1.17.4",
+    "@microsoft/sp-adaptive-card-extension-base": "1.17.4",
+    "@types/es6-promise": "0.0.33",
+    "tslib": "2.3.1"
   },
   "devDependencies": {
-    "@microsoft/sp-build-web": "~1.4.1",
-    "@microsoft/sp-module-interfaces": "~1.4.1",
-    "@microsoft/sp-webpart-workbench": "~1.4.1",
-    "@types/chai": ">=3.4.34 <3.6.0",
+    "@microsoft/eslint-plugin-spfx": "1.17.4",
+    "@microsoft/eslint-config-spfx": "1.17.4",
+    "eslint": "8.7.0",
+    "@microsoft/rush-stack-compiler-4.5": "0.5.0",
+    "@rushstack/eslint-config": "2.5.1",
+    "@microsoft/sp-build-web": "1.17.4",
+    "@microsoft/sp-module-interfaces": "1.17.4",
     "@types/jquery": "2.0.48",
-    "@types/mocha": ">=2.2.33 <2.6.0",
     "@types/toastr": "^2.1.35",
-    "ajv": "~5.2.2",
-    "gulp": "~3.9.1"
+    "@types/es6-promise": "0.0.33",
+    "ajv": "6.12.5",
+    "gulp": "4.0.2",
+    "typescript": "4.5.5"
   }
 }
