--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/es6-promise": "0.0.33",
     "@types/jquery": "2.0.48",
     "@types/toastr": "^2.1.35",
+    "@types/webpack-env": "^1.15.2",
     "ajv": "6.12.5",
     "eslint": "8.7.0",
     "eslint-plugin-react-hooks": "^4.6.0",
