--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "strictNullChecks": false,
     "skipLibCheck": true,
     "noImplicitAny": true,
+    "esModuleInterop": true,
     "typeRoots": ["./node_modules/@types", "./node_modules/@microsoft"],
     "types": ["es6-promise", "webpack-env"],
     "lib": ["es5", "dom", "es2015.collection", "es2015.promise"]
