--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@microsoft/sp-core-library": "1.17.4",
     "@microsoft/sp-dialog": "1.17.4",
     "@types/es6-promise": "0.0.33",
+    "@uifabric/styling": "^7.25.1",
     "tslib": "2.3.1"
   },
   "devDependencies": {
