--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@microsoft/sp-module-interfaces": "1.17.4",
     "@rushstack/eslint-config": "2.5.1",
     "@types/es6-promise": "0.0.33",
-    "@types/jquery": "2.0.48",
-    "@types/toastr": "^2.1.35",
+    "@types/jquery": "^2.0.48",
+    "@types/toastr": "^2.1.40",
     "@types/webpack-env": "^1.15.2",
     "ajv": "6.12.5",
     "eslint": "8.7.0",
